--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,47 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.suryansh.infobits" >
+    package="com.example.suryansh.infobits">
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/infobits"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-<<<<<<< 92290b405a441269f365fa619107df895519c755
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".Login"
-            android:icon="@mipmap/infobits"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
-=======
         android:theme="@style/AppTheme">
         <activity android:name=".homepage">
->>>>>>> Updates
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< 92290b405a441269f365fa619107df895519c755
-        <activity android:name=".splash_home" />
-        <activity android:name=".forgot_pass" />
-        <activity
-            android:name=".homepage"
-            android:icon="@mipmap/logo" />
-        <activity
-            android:name=".CommunicationPanel"
-            android:icon="@mipmap/logo"
-            android:label="@string/title_activity_communication_panel"
-            android:parentActivityName=".homepage"
-            android:theme="@style/AppTheme.NoActionBar" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
-        </activity>
-=======
->>>>>>> Updates
     </application>
 
 </manifest>
