--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".homepage"
+        <activity
+            android:name=".homepage"
             android:label="@string/app_name"
+            android:icon="@mipmap/logo"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,6 +22,16 @@
         <activity android:name=".Login"></activity>
         <activity android:name=".splash_home"></activity>
         <activity android:name=".forgot_pass"></activity>
+        <activity
+            android:name=".CommunicationPanel"
+            android:icon="@mipmap/logo"
+            android:label="@string/title_activity_communication_panel"
+            android:parentActivityName=".homepage"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.suryansh.infobits.homepage" />
+        </activity>
 
     </application>
 
