--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.suryansh.infobits">
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/infobits"
@@ -18,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".CommunicationPanel"
             android:icon="@mipmap/logo"
@@ -29,6 +30,31 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.suryansh.infobits.homepage" />
         </activity>
+
+        <activity
+            android:name=".CommForms"
+            android:icon="@mipmap/logo"
+            android:label="CommForm"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".CommunicationPanel"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.suryansh.infobits.homepage" />
+        </activity>
+
+        <activity
+            android:name=".login"
+            android:icon="@mipmap/logo"
+            android:label="@string/Login"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".homepage"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.suryansh.infobits.homepage" />
+        </activity>
+
         <activity
             android:name=".user_settings"
             android:icon="@mipmap/logo"
@@ -39,7 +65,32 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.suryansh.infobits.homepage" />
-        </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+        </activity>
+
+        <activity
+            android:name=".login"
+            android:icon="@mipmap/logo"
+            android:label="@string/Login"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".homepage"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.suryansh.infobits.homepage" />
+        </activity>
+
+        <activity
+            android:name=".signup"
+            android:icon="@mipmap/logo"
+            android:label="@string/Signup"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".homepage"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.suryansh.infobits.homepage" />
+        </activity>
+        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
             android:name="com.google.android.gms.version"
