--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,91 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.suryansh.infobits">
+    package="com.example.suryansh.infobits" >
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/infobits"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".homepage"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".CommunicationPanel"
+            android:name=".ConnectWithLibrary"
             android:icon="@mipmap/logo"
             android:label="@string/title_activity_communication_panel"
-            android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".homepage"
-            >
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.suryansh.infobits.homepage" />
         </activity>
-
         <activity
             android:name=".CommForms"
             android:icon="@mipmap/logo"
             android:label="CommForm"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".CommunicationPanel"
-            >
+            android:parentActivityName=".ConnectWithLibrary"
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.suryansh.infobits.homepage" />
         </activity>
-
         <activity
             android:name=".login"
             android:icon="@mipmap/logo"
             android:label="@string/Login"
-            android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".homepage"
-            >
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.suryansh.infobits.homepage" />
         </activity>
-
         <activity
             android:name=".user_settings"
             android:icon="@mipmap/logo"
             android:label="@string/title_activity_user_settings"
-            android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".homepage"
-            >
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.suryansh.infobits.homepage" />
         </activity>
-
         <activity
             android:name=".signup"
             android:icon="@mipmap/logo"
             android:label="@string/Signup"
-            android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".homepage"
-            >
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.suryansh.infobits.homepage" />
         </activity>
-        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <!--
+     ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
+        -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
     </application>
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 </manifest>
