--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -118,6 +118,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.suryansh.infobits.homepage" />
         </activity>
+        <activity
+            android:name=".infoBitsBulletin"
+            android:label="@string/title_infoBits"
+            android:parentActivityName=".ebooks"
+            android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.suryansh.infobits.homepage" />
+        </activity>
 
         <!--
      ATTENTION: This was auto-generated to add Google Play services to your project for
