--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:label="@string/app_name"
             android:logo="@mipmap/infobits"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LibRes"
             android:label="@string/libres"
@@ -123,7 +123,8 @@
             android:name=".infoBitsBulletin"
             android:label="@string/title_infoBits"
             android:parentActivityName=".ebooks"
-            android:theme="@style/AppTheme.NoActionBar" android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.suryansh.infobits.homepage" />
@@ -137,7 +138,8 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".forgot_password"></activity>
+        <activity android:name=".forgot_password" />
+        <activity android:name=".OnlineDb"></activity>
     </application>
 
 </manifest>
