--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 /captures
+/volley
+/gradle
+/.idea
+.gitignore
+settings.gradle
+gradlew.bat
+gradlew
+build.gradle
+gradle.properties
+app/build
+app/.gitignore
+app/build.gradle
+app/proguard-rules.pro
+app/src/test
+app/src/androidTest
