--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,14 @@
             android:label="@string/app_name"
             android:logo="@mipmap/infobits"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <data android:scheme="http"
+                    android:host="universe.bits-pilani.ac.in"
+                    android:port="12354" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".LibRes"
             android:label="@string/libres"
@@ -148,7 +155,9 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".forgot_password" />
+        <activity android:name=".forgot_password"
+            android:screenOrientation="portrait"
+            />
         <activity android:name=".OnlineDb"
             android:label="@string/online_db"
             android:parentActivityName=".homepage"
@@ -161,13 +170,14 @@
         <activity android:name=".lfmsAllItems"
             android:label="@string/lost_and_found"
             android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"
             android:logo="@mipmap/lf">
         </activity>
         <activity android:name=".Claim"
             android:label="@string/claim_lost_item"
             android:theme="@style/AppTheme"
-            android:logo="@mipmap/lf"
-            ></activity>
+            android:screenOrientation="portrait"
+            android:logo="@mipmap/lf" />
     </application>
 
 </manifest>
