--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.0.0"
 
     defaultConfig {
-        applicationId "com.example.suryansh.infobits"
+        applicationId "com.bitspilani.library.infobits"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
