--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.suryansh.infobits">
+    package="com.bitspilani.library.infobits">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -44,7 +44,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
         <activity
             android:name=".LibService"
@@ -54,7 +54,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
         <activity
             android:name=".ConnectWithLibrary"
@@ -64,7 +64,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
         <activity
             android:name=".DailyNews"
@@ -74,7 +74,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
         <activity
             android:name=".CommForms"
@@ -84,7 +84,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
         <activity
             android:name=".login"
@@ -94,7 +94,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
         <activity
             android:name=".user_settings"
@@ -104,7 +104,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
         <!--<activity-->
             <!--android:name=".signup"-->
@@ -114,7 +114,7 @@
             <!--android:theme="@style/AppTheme.NoActionBar">-->
             <!--<meta-data-->
                 <!--android:name="android.support.PARENT_ACTIVITY"-->
-                <!--android:value="com.example.suryansh.infobits.homepage" />-->
+                <!--android:value="com.bitspilani.library.infobits.homepage" />-->
         <!--</activity>-->
         <activity
             android:name=".ebooks"
@@ -124,7 +124,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
         <activity
             android:name=".downloadable_links"
@@ -134,7 +134,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
         <activity
             android:name=".infoBitsBulletin"
@@ -144,7 +144,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
 
         <!--
@@ -165,7 +165,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.suryansh.infobits.homepage" />
+                android:value="com.bitspilani.library.infobits.homepage" />
         </activity>
         <activity android:name=".lfmsAllItems"
             android:label="@string/lost_and_found"
